--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <head>
   <title>Jetsetter Concierge Travel Planning</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="C:\Users\u167723\Documents\Personal\Coding\Colours part 2.css">
+  <link rel="stylesheet" type="text/css" href="https://github.com/paull405/wedding.github.io/blob/master/css/main.scss">
 </head>
 <body>
 
